Follow-up for bugfix#9891 - Table header of dashboard widgets text misaligned.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.WidgetMenu.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.WidgetMenu.css
@@ -595,6 +595,7 @@ ul.ContextFunctions li:last-child:hover > a {
     float: right;
     margin-right: 0;
     font-size: 11px;
+    padding: 3px 0px 5px 0px;
 }
 
 .RTL .Pagination {
